add openid head tags

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Erik Runyon by erunyon</title>
-
+    <title>Erik Runyon</title>
+    <link rel="openid.server" href="http://www.myopenid.com/server" />
+    <link rel="openid.delegate" href="http://erunyon.myopenid.com/" />
+    <meta http-equiv="X-XRDS-Location" content="http://erunyon.myopenid.com/xrds" />
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -16,11 +18,7 @@
     <div class="wrapper">
       <header>
         <h1>Erik Runyon</h1>
-        <p></p>
-
-
         <p class="view"><a href="https://github.com/erunyon">View My GitHub Profile</a></p>
-
       </header>
       <section>
         <h3>Welcome to GitHub Pages.</h3>
