restyle and add content

--- a/index.html
+++ b/index.html
@@ -4,31 +4,33 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Erik Runyon</title>
+    <meta name="author" content="Erik Runyon">
+    <link href="/favicon.png" rel="icon">
     <link rel="openid.server" href="http://www.myopenid.com/server" />
     <link rel="openid.delegate" href="http://erunyon.myopenid.com/" />
     <meta http-equiv="X-XRDS-Location" content="http://erunyon.myopenid.com/xrds" />
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" href="css/site.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Erik Runyon</h1>
-        <p class="view"><a href="https://github.com/erunyon">View My GitHub Profile</a></p>
-      </header>
-      <section>
 
+  <header role="banner">
+    <h1>Erik Runyon</h1>
+  </header>
+  <section role="main">
+    <ul class="social">
+      <li class="blog"><a href="http://weedygarden.net/">Blog</a></li>
+      <li class="twitter"><a href="http://twitter.com/erunyon">Twitter</a></li>
+      <li class="gplus"><a href="https://plus.google.com/115544232122176645256">Google+</a></li>
+      <li class="github"><a href="http://github.com/erunyon">GitHub</a></li>
+      <li class="speakerdeck"><a href="https://speakerdeck.com/erunyon">Speaker Deck</a></li>
+    </ul>
+  </section>
+  <footer role="contentinfo">
+    <p>&copy; 2013 Erik Runyon</p>
+  </footer>
 
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages</small></p>
-      </footer>
-    </div>
-  <script src="javascripts/scale.fix.js"></script>
   <script type="text/javascript">
     var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
     document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -39,6 +41,19 @@
     pageTracker._trackPageview();
   } catch(err) {}
   </script>
-
+  <script type="text/javascript">
+    var _gauges = _gauges || [];
+    (function() {
+      var t   = document.createElement('script');
+      t.type  = 'text/javascript';
+      t.async = true;
+      t.id    = 'gauges-tracker';
+      t.setAttribute('data-site-id', '5105b55f613f5d72df000037');
+      t.src = '//secure.gaug.es/track.js';
+      var s = document.getElementsByTagName('script')[0];
+      s.parentNode.insertBefore(t, s);
+    })();
+  </script>
+  
   </body>
 </html>
