--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Erik Runyon</title>
     <meta name="author" content="Erik Runyon">
     <link href="/favicon.png" rel="icon">
+    <link rel="apple-touch-icon-precomposed" href="/css/images/webclip-57.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/css/images/webclip-72.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/css/images/webclip-114.png">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/css/images/webclip-144.png">
     <link rel="openid.server" href="http://www.myopenid.com/server" />
     <link rel="openid.delegate" href="http://erunyon.myopenid.com/" />
     <meta http-equiv="X-XRDS-Location" content="http://erunyon.myopenid.com/xrds" />
