--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="/css/images/webclip-72.png">
     <link rel="apple-touch-icon-precomposed" sizes="114x114" href="/css/images/webclip-114.png">
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/css/images/webclip-144.png">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     <link rel="stylesheet" href="css/site.css">
   </head>
