--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <ul class="social">
       <li class="blog"><a href="http://weedygarden.net/">Blog</a></li>
       <li class="twitter"><a href="http://twitter.com/erunyon">Twitter</a></li>
-      <li class="gplus"><a href="https://plus.google.com/115544232122176645256">Google+</a></li>
+      <li class="gplus"><a href="https://plus.google.com/+ErikRunyon/">Google+</a></li>
       <li class="github"><a href="http://github.com/erunyon">GitHub</a></li>
       <li class="speakerdeck"><a href="https://speakerdeck.com/erunyon">Speaker Deck</a></li>
     </ul>
