update styles and add App.net link

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <li class="gplus"><a href="https://plus.google.com/+ErikRunyon/">Google+</a></li>
       <li class="github"><a href="http://github.com/erunyon">GitHub</a></li>
       <li class="speakerdeck"><a href="https://speakerdeck.com/erunyon">Speaker Deck</a></li>
+      <li class="adn"><a href="https://alpha.app.net/erunyon">App.net</a></li>
     </ul>
   </section>
   <footer role="contentinfo">
